# nova

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
configs/: nova.default.yaml  nova.gemma4.clean.yaml  nova.local.yaml  nova.mistral24b.bakeoff.clean.yaml  nova.mistral24b.bakeoff.clean2.yaml  nova.mistral24b.bakeoff.clean3.yaml  nova.mistral24b.bakeoff.rerun.yaml  nova.mistral24b.bakeoff.yaml  nova.mistralnemo.clean.yaml  nova.mistralnemo.clean2.yaml  nova.mistralsmall32.clean.yaml  nova.mistralsmall32.q5.clean.yaml  nova.phase10.awarenesseval.rerun.yaml  nova.phase10.awarenesseval.yaml  nova.phase11.appraisaleval.rerun.yaml  nova.phase11.appraisaleval.yaml  nova.phase11.idlecognitioneval.rerun.yaml  nova.phase11.idlecognitioneval.yaml  nova.phase5.memoryeval.rerun.yaml  nova.phase5.memoryeval.rerun2.yaml  nova.phase5.memoryeval.yaml  nova.phase6.autobioeval.rerun.yaml  nova.phase6.autobioeval.rerun2.yaml  nova.phase6.autobioeval.yaml  nova.phase6.cognitioneval.rerun.yaml  nova.phase6.cognitioneval.yaml  nova.phase6.continuityeval.rerun.yaml  nova.phase6.continuityeval.yaml  nova.phase6.governanceeval.rerun.yaml  nova.phase6.governanceeval.yaml  nova.phase6.semanticeval.rerun.yaml  nova.phase6.semanticeval.yaml  nova.phase7.claimeval.rerun.yaml  nova.phase7.claimeval.yaml  nova.phase8.selfmodeleval.rerun.yaml  nova.phase8.selfmodeleval.yaml  nova.phase9.initiativeeval.rerun.yaml  nova.phase9.initiativeeval.yaml  nova.qwen14b.local.yaml  nova.qwen32b.bakeoff.yaml  (+1 more)
tests/: test_action_execution_evaluation.py  test_action_plan_schema.py  test_action_proposal.py  (+36 more)
(+143 files in other folders)
